Restructure code and fix problem of shared isActive state of magnets in inventory